fix: tighten margin on mobile

--- a/src/Views/Form/Templates/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Templates/Sequoia/assets/css/form.scss
@@ -303,7 +303,7 @@ p {
 		margin: 18px 70px 29px 70px;
 
 		@media screen and (max-width: $break-phone) {
-			margin: 14px 26px 16px 26px;
+			margin: 14px 12px 16px 12px;
 		}
 	}
 
